adding tests in continuous integration